--- a/cpp-setup.tex
+++ b/cpp-setup.tex
@@ -33,10 +33,10 @@
 \begin{frame}
   \frametitle{Default compilers}
   \begin{itemize}
-  \item FreeBSD: LLVM/clang++ or GCC
-  \item Linux: GNU CC and GNU Binutils
-  \item MacOS X: XCode (custom LLVM/clang++)
-  \item Windows: Visual Studio or Visual Studio Express (MSVC/cl)
+  \item FreeBSD: LLVM/\cmd{clang++} or GCC/\cmd{g++}
+  \item Linux: GCC/\cmd{g++} and GNU Binutils/\cmd{ld}
+  \item MacOS X: XCode (custom LLVM/\cmd{clang++})
+  \item Windows: Visual Studio or Visual Studio Express (MSVC/\cmd{cl})
   \end{itemize}
 
   Earlier versions of MacOS X used GCC 4.2.
@@ -70,6 +70,7 @@
       \begin{itemize}
       \item[] \pkg{devel/apache-ant}
       \item[] \pkg{devel/boost-all}
+      \item[] \pkg{devel/binutils}
       \item[] \pkg{devel/cmake}
       \item[] \pkg{devel/doxygen}
       \item[] \pkg{devel/git}
@@ -83,6 +84,7 @@
     \begin{itemize}
       \item[] \pkg{java/openjdk7}
       \item[] \pkg{java/junit}
+      \item[] \pkg{lang/clang33}
       \item[] \pkg{lang/python}
       \item[] \pkg{lang/python27}
       \item[] \pkg{print/texlive-full}
@@ -93,6 +95,10 @@
     \end{itemize}
     \end{column}
   \end{columns}
+
+  \bigskip
+  Add \path{/usr/local/bin} before \path{/usr/bin} in the \env{PATH}
+  so that the newer GNU \cmd{ld} is used.
 \end{frame}
 
 \begin{frame}
@@ -146,11 +152,11 @@
       \item[] \pkg{graphviz}
       \item[] \pkg{gtest-devel}
       \item[] \pkg{hdf5-devel}
-      \item[] \pkg{java-1.7.0-openjdk}
       \end{itemize}
     \end{column}
     \begin{column}{.5\linewidth}
       \begin{itemize}
+      \item[] \pkg{java-1.7.0-openjdk}
       \item[] \pkg{junit4}
       \item[] \pkg{libtiff-devel}
       \item[] \pkg{python-genshi} (or use \cmd{pip})
@@ -160,12 +166,17 @@
       \end{itemize}
     \end{column}
   \end{columns}
-\bigskip
-Install the following by hand:
 
-Ant, JUnit, Ice (RPMs available),
-\TeX{}Live (via \cmd{install-tl}),
-\pkg{sphinx} (via \cmd{pip})
+  \bigskip
+  Install the following by hand:
+
+  \begin{itemize}
+  \item Ant
+  \item JUnit
+  \item Ice (RPMs available)
+  \item \TeX{}Live (via \cmd{install-tl})
+  \item \pkg{sphinx} (via \cmd{pip})
+\end{itemize}
 \end{frame}
 
 \begin{frame}
@@ -254,7 +265,7 @@ Build and install the following by hand (for Bio-Formats):
       \end{itemize}
     \end{column}
   \end{columns}
-...and possibly more--we haven't yet done a Bio-Formats C++ build on Windows.
+…and possibly more—we haven't yet done a Bio-Formats C++ build on Windows.
 \end{frame}
 
 \subsection{Obtaining packages}
@@ -319,12 +330,12 @@ Build and install the following by hand (for Bio-Formats):
   There are many available build systems, which include:
 
   \begin{itemize}
-  \item Make
+  \item Make and GNU Make
   \item GNU Autotools
   \item CMake
+  \item Qt \cmd{qmake}
   \item SCons
-  \item Jam
-  \item qmake
+  \item Jam / BJam
   \item Ant / Maven / Gradle
   \end{itemize}
 \end{frame}
@@ -646,7 +657,7 @@ Visual Studio versions.  Leave set for the remaining steps.
 \end{frame}
 
 \begin{frame}[fragile]
-  \frametitle{Building OmeroCpp on Windows (1)}
+  \frametitle{Building OmeroCpp on Windows}
   \scriptsize
 
   Note: OmeroCpp building on Windows is a work in progress and not get
@@ -673,6 +684,7 @@ file in Visual Studio and build from inside the application.
 \end{frame}
 
 \appendix
+
 \section[]{Acknowledgements}
 
 \frame{
