Add progressive display

--- a/common.tex
+++ b/common.tex
@@ -24,7 +24,9 @@ breaklines=true,
 tabsize=3,
 showstringspaces=false,
 extendedchars=true,
-frame=single}
+frame=single,
+escapeinside=§§
+}
 
 \newcommand*{\vcenteredhbox}[1]{\begingroup
 \setbox0=\hbox{#1}\parbox{\wd0}{\box0}\endgroup}
